# Raspberry-Pi

./: .gitignore  LICENSE  README.md
Container/: .gitignore
Container/Webinterface/: ObserveableData.py  app.py  dockerfile  requirements.txt
Container/Webinterface/Webservice/: Webservice.py  __init__.py
Node-RED/Raspberry Pi Weather Station/: README.md
Node-RED/Raspberry Pi Weather Station/Node-Red/: Flow.txt
Script/: PrepareHost.sh  PrepareRasp.sh  UploadSysroot.sh
Script/OpenCV Installation/: CompileOpenCV.sh
Script/Qt Installation/: CompileGDB_Host.sh  CompileQt_Host.sh  Modules.txt
Software/: KML.py  Mail.py
Software/ARM/: README.md
Software/ARM/Lesson 1/: jlink.cfg  raspberry.cfg
Software/Flask/IOExample/: app.py
Software/Flask/OpenCVWebstream/: app.py
Software/Flask/SimpleWebserver/: app.py
Software/GPIO/: GPIO_Read.c  GPIO_Write.c  Interrupt.py  Ultraschall.py
Software/I2C/ADS1015/: ADS1015.py
Software/I2C/DS1307/: DS1307.c
Software/I2C/MPU6050/: MPU6050.py
Software/I2C/PCA9685/: PCA9685.py
Software/KernelModules/: .gitignore  README.md
Software/KernelModules/IODriver/: Driver.c  Test.c  Test.sh
Software/SPI/: MCP4812.py
Software/UART/: GPS.py  UART_Empfangen.c  UART_Senden.c
Software/VisualStudio/Camera/Camera/: CMakeLists.txt  CMakeLists.txt.old  Camera-Debug.vgdbsettings  Camera-Release.vgdbsettings  Camera.cpp  Camera.vcxproj  Camera.vcxproj.filters  gcc_Debug.h
Software/Weather/: README.md
lighttpd/conf/: lighttpd.conf
lighttpd/www/: GPIO.html  Upload.html  Uploadpfad.php  phpinfo.php
(+119 files in other folders)
